Mover la app de notas como subpackage de un nuevo package 'algotp'.

--- a/notas.ini
+++ b/notas.ini
@@ -1,5 +1,5 @@
 # Configuración para nuestro app server, uWSGI. (Para desarrollo, simplemente
-# usar ./notasweb.py.)
+# usar ./wsgi.py.)
 #
 # Para probar configuraciones de uWSGI, ejecutar:
 #
@@ -10,16 +10,22 @@
 
 [uwsgi]
 strict = true
-uwsgi-socket = :3031
-
 master = true
-workers = 4
+workers = 2
 
-plugins = python3
-callable = app
-mount=/notas=notasweb.py
+plugins = python3, logfile
+enable-threads = true
 
+module = wsgi:app
 need-app = true
-no-orphans = true
-die-on-term = true
-manage-script-name = true
+virtualenv = %d.venv
+route-run = fixpathinfo:
+
+for-readline = .env
+  env = %(_)
+endfor =
+
+# Settings para turing, en sincronía con conf/*.nginx.
+# chdir = %d/repo
+# chmod-socket = 660
+# socket = %d/run/%n.sock
