Mover la app de notas como subpackage de un nuevo package 'algotp'.

--- a/notas.ini
+++ b/notas.ini
@@ -1,5 +1,5 @@
 # Configuración para nuestro app server, uWSGI. (Para desarrollo, simplemente
-# usar ./notasweb.py.)
+# usar `FLASK_APP=algotp.notas flask run`.)
 #
 # Para probar configuraciones de uWSGI, ejecutar:
 #
@@ -10,16 +10,18 @@
 
 [uwsgi]
 strict = true
-uwsgi-socket = :3031
-
 master = true
-workers = 4
+workers = 2
 
-plugins = python3
-callable = app
-mount=/notas=notasweb.py
-
+plugins = python3, logfile
 need-app = true
-no-orphans = true
-die-on-term = true
-manage-script-name = true
+enable-threads = true
+
+module = algotp.notas:app
+route-run = fixpathinfo:
+virtualenv = %d.venv
+
+# Settings para turing, en sincronía con conf/*.nginx.
+# chdir = %d/repo
+# socket = %d/run/%n.sock
+# logger = file:%d/run/%n.log
