--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-gspread = "==0.2.*"
 httplib2 = "==0.17.*"
 oauth2client = "~=4.1"
 webargs = "~=5.0"
@@ -12,6 +11,9 @@ flask = "~=1.1"
 flask-wtf = "==0.14.*"
 wtforms = "~=2.3"
 email-validator = "~=1.1"
+frozendict = "~=1.2"
+google-api-python-client = "~=1.8"
+google-auth-oauthlib = "==0.4.*"
 
 [dev-packages]
 python-dotenv = "*"
